force-app/main/default/objects/Stripe_Payment_Transaction__c/Stripe_Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Payment Transaction</label>
    <nameField>
        <displayFormat>PMT-{000000}</displayFormat>
        <label>Stripe Payment Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payment Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>