force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to the Contact for this payment transaction</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Stripe Payment Transactions</relationshipLabel>
    <relationshipName>Stripe_Payment_Transactions_Contact</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField> 