force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the payment transaction</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 