force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <description>Reason for payment failure if applicable</description>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 