force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Fee_Amount__c</fullName>
    <description>Fee amount for this transaction</description>
    <label>Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 