force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Processing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Processing_Fee__c</fullName>
    <description>Processing fee for this transaction</description>
    <label>Processing Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField> 