force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Receipt_URL__c.field-meta.xml
<CustomField>
    <fullName>Receipt_URL__c</fullName>
    <description>URL to the payment receipt</description>
    <label>Receipt URL</label>
    <type>Url</type>
</CustomField> 