force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Stripe_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Stripe Invoice for this payment transaction</description>
    <label>Stripe Invoice</label>
    <referenceTo>Stripe_Invoice__c</referenceTo>
    <relationshipLabel>Stripe Payment Transactions</relationshipLabel>
    <relationshipName>Stripe_Payment_Transactions_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField> 