force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Stripe_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Payment_Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Stripe Payment Method used for this transaction</description>
    <label>Stripe Payment Method</label>
    <referenceTo>Stripe_Payment_Method__c</referenceTo>
    <relationshipLabel>Stripe Payment Transactions</relationshipLabel>
    <relationshipName>StripeTxns_PM</relationshipName>
    <type>Lookup</type>
</CustomField> 