force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipLabel>Stripe Payment Transactions</relationshipLabel>
    <relationshipName>Stripe_Payment_Transactions_Subscription</relationshipName>
    <type>Lookup</type>
</CustomField>