force-app/main/default/objects/Stripe_Payment_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <description>Type of payment transaction</description>
    <label>Transaction Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
                <default>true</default>
                <label>Payment</label>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Chargeback</fullName>
            </value>
            <value>
                <fullName>Dispute</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 